--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.profiles.active=test
+spring.profiles.active=${APP_PROFILE:test}
 
 spring.jpa.open-in-view=false
 
+security.oauth2.client.client-id=${CLIENT_ID:dslearn}
+security.oauth2.client.client-secret=${CLIENT_SECRET:dslearn}
+
+jwt.secret=${JWT_SECRET:dslearn}
+jwt.duration=${JWT_DURATION:86400}
